force-app/main/default/objects/Account/fields/Account_Principal__c.field-meta.xml
<CustomField>
    <fullName>Account_Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Principal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>