force-app/main/default/objects/Account/fields/Account_Size__c.field-meta.xml
<CustomField>
    <fullName>Account_Size__c</fullName>
    <description>Determined by annual revenue. (&gt;$1billion is Enterprise, &lt;$1billion is Mid-Market)</description>
    <inlineHelpText>Determined by annual revenue. (&gt;$1billion is Enterprise, &lt;$1billion is Mid-Market)</inlineHelpText>
    <label>Account Size ($)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>