force-app/main/default/objects/Account/fields/Account_Vote_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_Vote_Limit__c</fullName>
    <formula>IF (OR(ISBLANK( Account_Votes__c ) ,  ISNULL( Account_Votes__c )) ,0,Account_Votes__c )</formula>
    <label>Idea Vote Limit Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>