force-app/main/default/objects/Account/fields/Account_Votes__c.field-meta.xml
<CustomField>
    <fullName>Account_Votes__c</fullName>
    <label>Idea Vote Limit Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>