force-app/main/default/objects/Account/fields/Alliances_Influlence__c.field-meta.xml
<CustomField>
    <fullName>Alliances_Influlence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alliances Influlence</label>
    <type>Checkbox</type>
</CustomField>