force-app/main/default/objects/Account/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this account converted from a lead?</description>
    <label>Converted?</label>
    <type>Checkbox</type>
</CustomField>