force-app/main/default/objects/Account/fields/Current_Next_Month_Opps__c.field-meta.xml
<CustomField>
    <fullName>Current_Next_Month_Opps__c</fullName>
    <label>Current &amp; Next Month Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>