force-app/main/default/objects/Account/fields/CY_Closed_Won_Opps_Products_Only__c.field-meta.xml
<CustomField>
    <fullName>CY_Closed_Won_Opps_Products_Only__c</fullName>
    <description>The products only sum of all opportunities closed/won in the current year. This field is populated via rollup helper.</description>
    <inlineHelpText>The products only sum of all opportunities closed/won in the current year. This field is populated via rollup helper.</inlineHelpText>
    <label>CY Closed/Won Opps - Products Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>