force-app/main/default/objects/Account/fields/CY_ClosedWon_Opps_Services_Only__c.field-meta.xml
<CustomField>
    <fullName>CY_ClosedWon_Opps_Services_Only__c</fullName>
    <description>The services only sum of all opportunities closed/won in the current year. This field is populated via rollup helper.</description>
    <inlineHelpText>The services only sum of all opportunities closed/won in the current year. This field is populated via rollup helper.</inlineHelpText>
    <label>CY Closed/Won Opps - Services Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>