force-app/main/default/objects/Account/fields/Date_of_1st_Won_Opp__c.field-meta.xml
<CustomField>
    <fullName>Date_of_1st_Won_Opp__c</fullName>
    <description>This is the date 7Summits closed their 1st deal with this account</description>
    <inlineHelpText>This is the date 7Summits closed their 1st deal with this account</inlineHelpText>
    <label>Date of 1st Won Opp</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>