force-app/main/default/objects/Account/fields/Former_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Former_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Former Account owner, used for commission splits</description>
    <inlineHelpText>Former Account owner, used for commission splits</inlineHelpText>
    <label>Former Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>