force-app/main/default/objects/Account/fields/IBM_Address__c.field-meta.xml
<CustomField>
    <fullName>IBM_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>