force-app/main/default/objects/Account/fields/IBM_Best_Fit_CMR__c.field-meta.xml
<CustomField>
    <fullName>IBM_Best_Fit_CMR__c</fullName>
    <inlineHelpText>IBM&apos;s code for customer master record in IBM system</inlineHelpText>
    <label>Best Fit CMR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>