force-app/main/default/objects/Account/fields/IBM_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>IBM_Client_Type__c</fullName>
    <label>Client Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>