force-app/main/default/objects/Account/fields/IBM_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>IBM_Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>