force-app/main/default/objects/Account/fields/IBM_Customer_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>IBM_Customer_Verified_By__c</fullName>
    <inlineHelpText>This field should indicate if an existing IBM CRA is in place based on the client being an existing IBM customer.</inlineHelpText>
    <label>IBM Customer Verified By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>