force-app/main/default/objects/Account/fields/IBM_Customer_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>IBM_Customer_Verified_Date__c</fullName>
    <label>IBM Customer Verified Date</label>
    <type>Date</type>
</CustomField>