force-app/main/default/objects/Account/fields/IBM_GEO_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>IBM_GEO_Code_Name__c</fullName>
    <label>GEO Code &amp; Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>