force-app/main/default/objects/Account/fields/IBM_Global_Buying_Group_name__c.field-meta.xml
<CustomField>
    <fullName>IBM_Global_Buying_Group_name__c</fullName>
    <label>Global Buying Group (GBG) &amp; name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>