force-app/main/default/objects/Account/fields/IBM_Global_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>IBM_Global_Client_Name__c</fullName>
    <label>Global Client (GC) &amp; Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>