force-app/main/default/objects/Account/fields/IBM_Industry__c.field-meta.xml
<CustomField>
    <fullName>IBM_Industry__c</fullName>
    <inlineHelpText>Industry of the client&apos;s business.</inlineHelpText>
    <label>IBM Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>