force-app/main/default/objects/Account/fields/IBM_Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>IBM_Issuing_Country__c</fullName>
    <label>Issuing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>