force-app/main/default/objects/Account/fields/IBM_Lead_Client_Rep_Notes_ID__c.field-meta.xml
<CustomField>
    <fullName>IBM_Lead_Client_Rep_Notes_ID__c</fullName>
    <inlineHelpText>Notates who is the lead client rep from IBM that manages the overall relationship with the client.</inlineHelpText>
    <label>Lead Client Rep Notes ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>