force-app/main/default/objects/Account/fields/IBM_Market_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>IBM_Market_Code_Name__c</fullName>
    <label>Market Code &amp; Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>