force-app/main/default/objects/Account/fields/IBM_SAP__c.field-meta.xml
<CustomField>
    <fullName>IBM_SAP__c</fullName>
    <externalId>true</externalId>
    <label>SAP #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>