force-app/main/default/objects/Account/fields/Marketing_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Partnership__c</fullName>
    <description>Can we use their logo only, or Full - case studies, webinars, etc for our marketing purposes?</description>
    <inlineHelpText>Can we use their logo only, or Full - case studies, webinars, etc for our marketing purposes?</inlineHelpText>
    <label>Marketing Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Logo Only</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>