force-app/main/default/objects/Account/fields/netsuite_conn__NetSuite_Id__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Id__c</fullName>
    <description>Celigo SF-NS Connector: Internal Id of NetSuite customer record.</description>
    <externalId>true</externalId>
    <label>NetSuite Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>