force-app/main/default/objects/Account/fields/netsuite_conn__Pushed_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Pushed_From_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If &quot;Account sync only with opportunity setting is on&quot; then this flag will let account trigger know whether account sync has started from opportunity or from other source.</description>
    <label>Pushed From Opportunity</label>
    <type>Checkbox</type>
</CustomField>