force-app/main/default/objects/Account/fields/netsuite_conn__Pushed_From_Quote__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Pushed_From_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed From Quote</label>
    <type>Checkbox</type>
</CustomField>