force-app/main/default/objects/Account/fields/Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Next_Month__c</fullName>
    <label>Next Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>