force-app/main/default/objects/Account/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>Description of what is the Next Step to progress the Deal</description>
    <label>Next Step</label>
    <length>450</length>
    <type>LongTextArea</type>
</CustomField>