force-app/main/default/objects/Account/fields/Non_Channel_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Non_Channel_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, either the Lead Account/Company is not owned by a SF RVP/AE and therefore the Lead is assigned outside of the mapping process, or the Account/Company is owned by a SF RVP/AE but the Lead is NOT assigned to the 7S AE/CP who maps to the SF RVP/AE.</description>
    <inlineHelpText>If checked, either the Lead Account/Company is not owned by a SF RVP/AE and therefore the Lead is assigned outside of the mapping process, or the Account/Company is owned by a SF RVP/AE but the Lead is NOT assigned to the 7S AE/CP who maps to the SF RVP/A</inlineHelpText>
    <label>Non Channel Assignment</label>
    <type>Checkbox</type>
</CustomField>