force-app/main/default/objects/Account/fields/Partner_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Salesforce Partner Sales Rep who manages this Account</description>
    <inlineHelpText>Add the Salesforce Partner Sales Rep who manages this account.</inlineHelpText>
    <label>Partner Sales Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Salesforce</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Partner Sales Rep)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>