force-app/main/default/objects/Account/fields/pse__ERP_Worker_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__ERP_Worker_Correlation_Id__c</fullName>
    <description>This records the worker correlation key used within the erp system.</description>
    <externalId>true</externalId>
    <inlineHelpText>This records the worker correlation key used within the erp system.</inlineHelpText>
    <label>ERP Worker Correlation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>