force-app/main/default/objects/Account/fields/ss_int_NetSuite_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>ss_int_NetSuite_Customer_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>NetSuite Customer identifier synchronized as part of the 7Summits Boomi Salesforce/NetSuite integration.</description>
    <externalId>true</externalId>
    <label>NetSuite Customer ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>