force-app/main/default/objects/Account/fields/ss_int_NetSuite_First_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>ss_int_NetSuite_First_Sync_Time__c</fullName>
    <description>Date/Time this account record was first synchronized with NetSuite</description>
    <label>NetSuite First Sync Time</label>
    <type>DateTime</type>
</CustomField>