force-app/main/default/objects/Account/fields/ss_int_NetSuite_Synchronized__c.field-meta.xml
<CustomField>
    <fullName>ss_int_NetSuite_Synchronized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value indicating the account record has been integrated with NetSuite</description>
    <label>NetSuite Synchronized</label>
    <type>Checkbox</type>
</CustomField>