force-app/main/default/objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Account is in a Client Partner portfolio.</description>
    <inlineHelpText>This Account is in a Client Partner portfolio.</inlineHelpText>
    <label>Target Account</label>
    <type>Checkbox</type>
</CustomField>