force-app/main/default/objects/Account/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <description>Date Account owner is transferred, used to commission splits</description>
    <label>Transfer Date</label>
    <type>Date</type>
</CustomField>