force-app/main/default/objects/Account/fields/Won_Sales_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Won_Sales_All_Time__c</fullName>
    <label>Won Sales - All Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>