force-app/main/default/objects/Account/fields/x1st_Created_Opp_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>x1st_Created_Opp_Lead_Source__c</fullName>
    <description>The Lead Source of the first opportunity created.</description>
    <inlineHelpText>The Lead Source of the first opportunity created.</inlineHelpText>
    <label>1st Created Opp Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>