force-app/main/default/objects/Account/fields/X1st_Won_Opp_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>X1st_Won_Opp_Lead_Source__c</fullName>
    <label>1st Won Opp Lead Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>