force-app/main/default/objects/Account/fields/X2_Months_Out__c.field-meta.xml
<CustomField>
    <fullName>X2_Months_Out__c</fullName>
    <label>2 Months Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>