force-app/main/default/objects/Account/fields/x7s_video_list__c.field-meta.xml
<CustomField>
    <fullName>x7s_video_list__c</fullName>
    <label>Video List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>