force-app/main/default/objects/Account/fields/XX7S_Client__c.field-meta.xml
<CustomField>
    <fullName>XX7S_Client__c</fullName>
    <formula>IF(
NOT(
ISBLANK(Date_of_1st_Won_Opp__c)),
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7S Client</label>
    <type>Checkbox</type>
</CustomField>