force-app/main/default/objects/Account/validationRules/Industry_Type_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Type_Not_Required</fullName>
    <active>true</active>
    <description>If the account record type is Vendor or Competitor, the Industry Type is not required</description>
    <errorConditionFormula>AND
(

  NOT
  (
   OR
   (
    ISPICKVAL(Record_Type__c, &quot;Vendor&quot;),
    ISPICKVAL(Record_Type__c, &quot;Competitor&quot;)
   )
  ),

ISBLANK(TEXT(Industry_Type__c))
)
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c
&amp;&amp;  $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Industry_Type__c</errorDisplayField>
    <errorMessage>Industry Type is a required field on Account records. Please add the appropriate Industry Type to the Account record in order to proceed</errorMessage>
</ValidationRule>