force-app/main/default/objects/Account/validationRules/Lead_Source_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Not_Required</fullName>
    <active>true</active>
    <description>If the account record type is Vendor or Competitor, the Lead Source is not required</description>
    <errorConditionFormula>AND
(

  NOT
  (
   OR
   (
    ISPICKVAL(Record_Type__c, &quot;Vendor&quot;),
    ISPICKVAL(Record_Type__c, &quot;Competitor&quot;)
   )
  ),
(Date_Created__c) &gt; DATE(2018,01,01),
ISBLANK(TEXT(Lead_Source__c))
)
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c
&amp;&amp; $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>Lead_Source__c</errorDisplayField>
    <errorMessage>Lead Source is a required field on Account records. Please add the appropriate Lead Source value to the Account record in order to proceed.</errorMessage>
</ValidationRule>