force-app/main/default/objects/Account/listViews/All_7S_Clients.listView-meta.xml
<ListView>
    <fullName>All_7S_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Industry_Type__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Industry_Type__c</field>
        <operation>equals</operation>
        <value>Higher Education</value>
    </filters>
    <label>All 7S Clients</label>
</ListView>