force-app/main/default/objects/Account/listViews/Clients_Financial_Services.listView-meta.xml
<ListView>
    <fullName>Clients_Financial_Services</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>XX7S_Client__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Industry_Type__c</field>
        <operation>equals</operation>
        <value>Financial Services</value>
    </filters>
    <label>Clients - Financial Services</label>
</ListView>