force-app/main/default/objects/Account/listViews/Higgins_Accounts.listView-meta.xml
<ListView>
    <fullName>Higgins_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Current_Next_Month_Opps__c</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>jsImpacts__Data_com_Matched__c</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Won_Sales_All_Time__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Marketing_Partnership__c</columns>
    <columns>LID__LinkedIn_Company_Id__c</columns>
    <columns>XX7S_Client__c</columns>
    <filterScope>Mine</filterScope>
    <label>Higgins Accounts</label>
</ListView>