force-app/main/default/objects/Account/listViews/Hoagie_Accounts.listView-meta.xml
<ListView>
    <fullName>Hoagie_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Target_Account__c</columns>
    <columns>Next_Step__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Hogervorst</value>
    </filters>
    <label>Hogervorst Accounts</label>
    <language>en_US</language>
</ListView>