force-app/main/default/objects/Account/listViews/Jivex_Accounts.listView-meta.xml
<ListView>
    <fullName>Jivex_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Jivex Accounts</label>
    <sharedTo>
        <role>Account_Executive_East</role>
    </sharedTo>
</ListView>