force-app/main/default/objects/Account/listViews/MacManus_Accounts.listView-meta.xml
<ListView>
    <fullName>MacManus_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>MacManus</value>
    </filters>
    <label>MacManus Accounts</label>
    <language>en_US</language>
</ListView>