force-app/main/default/objects/Account/listViews/Masonius_Accounts_FinServ.listView-meta.xml
<ListView>
    <fullName>Masonius_Accounts_FinServ</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Masonius</value>
    </filters>
    <filters>
        <field>Industry_Type__c</field>
        <operation>equals</operation>
        <value>Financial Services</value>
    </filters>
    <label>Masonius Accounts_FinServ</label>
    <language>en_US</language>
</ListView>