force-app/main/default/objects/Account/listViews/New_Resources_Consulting.listView-meta.xml
<ListView>
    <fullName>New_Resources_Consulting</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>New Resources Consulting</label>
    <language>en_US</language>
</ListView>